# pyxie-tarot

./: .gitignore  .oxfmtrc.json  .oxfmtrrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/skills/db-reset/: SKILL.md
backend/: .env.example  Makefile  alembic.ini  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py  seed.py  seed_decks.py  seed_diary.py
backend/app/api/v1/: auth.py  diary_entries.py  router.py  spreads.py  users.py
backend/app/api/v1/admin/: __init__.py  deck_cards.py  decks.py  diary_entries.py  spreads.py  users.py
backend/app/core/: security.py
backend/app/models/: deck.py  deck_card.py  diary_entry.py  spread.py  user.py
backend/app/schemas/: auth.py  deck.py  deck_card.py  diary_entry.py  spread.py  tarot.py  user.py
backend/app/seed_data/: character_names.json  custom_spreads.json  diary_entry_texts.json  waite_smith_deck.json
backend/migrations/: env.py
backend/migrations/versions/: 2f4fcd8182af_add_decks_and_deck_cards_tables.py  395f25063d98_create_users_table.py  39f10d4850da_add_diary_entries_table.py  50c35f23e344_seed_default_spreads.py  781837db80c7_widen_diary_entries_num_cards_limit.py  7972b8477f21_align_user_text_columns.py  803925a2bf62_add_allow_reversed_to_spreads.py  8384d7206649_add_role_to_users.py  ba2e3a00c036_add_default_uuid_generation_to_users_id.py  c7b5d3bf02e0_add_spreads_table.py  cefe6d9788fb_seed_celtic_cross_and_horseshoe_spreads.py  de6b9c59c68a_widen_spreads_num_cards_limit.py
backend/tests/: conftest.py  test_deck_schema.py  test_diary_entries_schema.py  test_route_protection.py  test_security.py  test_spreads_schema.py
database/: full_dump.sql  schema.sql  schema_with_data.sql  seed.sql
frontend/: .env.example  .oxfmtrc.json  .oxlintrc.json  VITE_SETUP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  root.tsconfig.json  root.vite.config.ts  stats.html  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/.husky/: pre-commit
frontend/_old-src/: app.tsx
frontend/_old-src/api/: users.ts
frontend/_old-src/db-browser/: login.tsx
frontend/_old-src/routers/: dbb-router.tsx  index.tsx
frontend/apps/admin/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/apps/admin/src/: App.tsx  DeckCards.tsx  Decks.tsx  DiaryEntries.tsx  Layout.tsx  Login.tsx  RequireAuth.tsx  Router.tsx  Spreads.tsx  Users.tsx  global.d.ts  (+1 more)
frontend/apps/app/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  users.ts
frontend/src/api-browser/: index.ts  login.tsx  users.tsx
frontend/src/constant/: api.ts  index.ts  routes.ts
frontend/src/constants/: api.ts  index.ts
frontend/src/db-browser/: index.ts  login.tsx
frontend/src/model/: user.ts
frontend/src/models/: api.ts  auth.ts  index.ts  user.ts
frontend/src/router/: api-browser-router.tsx  db-browser-router.tsx  index.ts  router.tsx
frontend/src/routers/: db-browser-router.tsx  dbb-router.tsx  index.ts  index.tsx  router.tsx
frontend/src/util/: auth.ts
(+38 files in other folders)
