[project]
name = "pyxie-tarot"
version = "0.1.0"
description = "A tarot reading application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.104.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
