[project]
name = "pyxie-tarot"
version = "0.1.0"
description = "A tarot reading application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.137",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "ruff>=0.15.21",
    "sqlalchemy[asyncio]>=2.0.51",
    "starlette>=0.49.3",
    "uvicorn[standard]>=0.51.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["migrations", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP", "N", "ASYNC", "PERF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ANN"]
"conftest.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["pyxie_tarot"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.2", "pytest-asyncio>=1.2.0", "ruff>=0.15.21"]
